add project description and fix font

--- a/index.html
+++ b/index.html
@@ -84,39 +84,54 @@
             <div class="project">
                 <h2>프로젝트</h2>
                 <div>
+                    <h3>Eval42</h3>
+                    <img src="src/eval42.png" alt="">
+                    <ul>
+                        <li>July 2020 ~ (진행중)</li>
+                        <li>42Seoul에서 동료평가시 도움을 주는 기능을 제공하는 서비스 개발</li>
+                        <li>React, Redux, Heroku, Serverless</li>
+                        <li>혼자서 진행한 프로젝트로, 42api를 활용해 서비스를 만들었습니다.
+                            API문서가 매우 빈약해 이번 프로젝트를 통하여 문서화의 중요성을 알게 되었습니다. <br>
+                            빠르게 프로젝트를 진행하기 위해 외부 디자인 프레임워크 Ant-design와 간단한 배포 서비스인 Heroku를 사용하였고, Redux-Thunk를 도입한
+                            프로젝트였습니다.
+                        </li>
+                        <li>
+                            <a href="http://eval42.herokuapp.com/">사이트</a>,
+                            <a href="https://github.com/cos18/eval42">깃헙</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
                     <h3>5월 소프트웨어에 물들다 웹사이트</h3>
                     <img src="src/somul.png" alt="">
                     <ul>
                         <li>Mar 2020 ~ (진행중)</li>
                         <li>매년 5월 진행하는 강연 봉사 프로젝트 사이트 개발 (프론트엔드) & 유지보수</li>
                         <li>React, Typescript, Storybook, Github Action</li>
+                        <li>TypeScript와 Clean Architecture를 처음 접한 프로젝트입니다.
+                            새로운 기술들을 배우면서 주요 컴포넌트들을 제작하고, 반응형 사이트를 제작했습니다.<br>
+                            현업에 종사하시는 개발자분들과 디자이너분과 함께 진행해 현업에 최대한 유사한 워크플로우로 프로젝트를 진행해 배움이 많았던 프로젝트였습니다.</li>
                         <li>
                             <a href="https://somul.kr/">사이트</a>,
                             <a href="https://github.com/somul-project/somul-system-frontend">깃헙</a>
                         </li>
                     </ul>
                 </div>
-                <div>
+                <div id="somathealth">
                     <h3>SomatHealth</h3>
                     <img src="src/somathealth.png" alt="">
                     <ul>
                         <li>May ~ Nov 2019</li>
                         <li>요가 자세 인식 안드로이드 애플리캐이션 기획 & 개발 (풀스택)</li>
                         <li>Kotlin, CameraX, Retrofit, Django Rest Framework, Nginx, AWS</li>
-                        <li>소프트웨어 마에스트로 프로젝트 - <a href="https://youtu.be/Hc5HKKEyxQo">인터뷰</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>모두의 공강</h3>
-                    <img src="src/everyday.png" alt="">
-                    <ul>
-                        <li>Jan ~ Feb 2019</li>
-                        <li>팀플시 에브리타임에 있는 시간표를 참고해 팀원 모두 참여 가능한 시간을 잡는 서비스 개발</li>
-                        <li>Django, Heroku</li>
-                        <li>
-                            <a href="http://timetable-checker.herokuapp.com">데모</a>,
-                            <a href="https://github.com/likelionlabtdd/timetable_checker">깃헙</a>
-                        </li>
+                        <li>프로젝트를 처음으로 주도하여 풀 스택의 역활로 개발을 진행한 프로젝트입니다. <br>
+                            프론트엔드는 Kotlin을 처음 접해 언어를 배우며 AndroidX를 도입했습니다.
+                            특히 요가 자세를 인식하기 위한 카메라 액티비티를 CameraX로 구현했습니다.<br>
+                            백엔드는 익숙한 Django 스택을 활용해 DRF로 API서버를 구축했습니다.
+                            요가 자세 사진을 서버로 보내기 위해 multipart로 변환하여 처리했습니다.<br>
+                            같은 기간에 프론트엔드와 백엔드를 둘 다 진행해 더욱 세세하게 계획을 세웠습니다.
+                            팀원들에게 gitflow를 알려줘 적용하려고 노력하였고, 이를 통해 코드리뷰를 진행했습니다. </li>
+                        <li><a href="https://youtu.be/Hc5HKKEyxQo">인터뷰</a></li>
                     </ul>
                 </div>
             </div>
@@ -129,9 +144,11 @@
                     -->
                     <ul>
                         <li>1기 Cadet (2020~)</li>
-                        <li>프랑스에서 시작된 ecole42의 서울 캠퍼스 본과정 프로그램에 참여하여 현재 참여중입니다.
+                        <li>프랑스에서 시작된 ecole42의 서울 캠퍼스 본과정 프로그램에 현재 참여중입니다.
                             42는 소프트웨어에 대한 경험을 나누는 방법, 멋진 동료와 협업하는 방법, 누군가를 위해 본인의 경험을 공유하는 방법을 배웁니다. 그리고 배우는 방법을 배웁니다.
                         </li>
+                        <li>현제 프로젝트로는 C로 Raytracing을 구현하는 miniRT를 시도중이며, 동아리 활동으로 JS을 짧은 기간에 익히는
+                            <a href="JS Piscine">JS Piscine</a>을 기획중에 있습니다.</li>
                         <li>
                             <a href="https://42seoul.kr">홈페이지</a>,
                             <a href="https://github.com/cos18/42cursus">진행중인 프로젝트 (깃헙)</a>
@@ -144,6 +161,7 @@
                     <ul>
                         <li>10기 수료생 (2019)</li>
                         <li>창의도전형 SW인재 육성으로 SW산업의 미래르 선도하는 정부지원 사업인 소프트웨어 마에스트로 과정에 참여하여 수료했습니다.</li>
+                        <li>연수 과정중에 <a href="#somathealth">SomatHealth 프로젝트</a>를 진행했습니다.</li>
                         <li>
                             <a href="http://swmaestro.org/">홈페이지</a>
                         </li>
@@ -153,13 +171,16 @@
                     <h3>멋쟁이 사자처럼 @ 성균관대학교</h3>
                     <img src="src/likelion.jpg" alt="">
                     <ul>
-                        <li>7기 운영진 & 교육책임자 (2019)</li>
-                        <li>Python & Django 세션 및 스터디를 진행했습니다.</li>
+                        <li>6기 참여 (2018), 7기 운영진 & 교육책임자 (2019)</li>
+                        <li>무엇이든 만들어보자는 슬로건에 끌려 6기에 처음 참여하였고, 7기에는 운영인으로 참여하면서 매주 세션 교육을 주도적으로 진행하였습니다.
+                            비전공자분들을 어떻게 첫 코딩을 알려드릴지 고민을 많이 했고, 이에 대한 생각을 여러 컨퍼런스에서 공유했습니다.
+                        </li>
                         <li>
-                            <a href="https://www.facebook.com/likelionskku/">Facebook Page</a>,
-                            <a href="https://github.com/cos18/likelion7th-edu">Teaching stuffs</a>,
-                            <a href="https://www.youtube.com/playlist?list=PLBlLtvR3PRprIesQ1KOdqsHe5EsQfdzdI">Youtube
-                                Playlist</a>
+                            <a href="https://www.facebook.com/likelionskku/">페이스북</a>,
+                            <a href="https://github.com/cos18/likelion7th-edu">교육 자료</a>,
+                            <a href="https://www.youtube.com/playlist?list=PLBlLtvR3PRprIesQ1KOdqsHe5EsQfdzdI">
+                                유튜브 재생목록
+                            </a>
                         </li>
                     </ul>
 
