fix mobile crash error & add some disc.

--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                         <li>프랑스에서 시작된 ecole42의 서울 캠퍼스 본과정 프로그램에 현재 참여중입니다.
                             42는 소프트웨어에 대한 경험을 나누는 방법, 멋진 동료와 협업하는 방법, 누군가를 위해 본인의 경험을 공유하는 방법을 배웁니다. 그리고 배우는 방법을 배웁니다.
                         </li>
-                        <li>현제 프로젝트로는 C로 Raytracing을 구현하는 miniRT를 시도중이며, 동아리 활동으로 JS을 짧은 기간에 익히는
-                            <a href="JS Piscine">JS Piscine</a>을 기획중에 있습니다.</li>
+                        <li>현제 프로젝트로는 C로 Raytracing을 구현하는 miniRT를 시도중이며, 선발과정인 피씬 과정에서 팀 프로젝트 평가에 참여하여 도움을 주고 있습니다.<br>
+                            또한 동아리 활동으로 JS을 짧은 기간에 익히는 <a href="JS Piscine">JS Piscine</a>을 기획중에 있습니다.</li>
                         <li>
                             <a href="https://42seoul.kr">홈페이지</a>,
                             <a href="https://github.com/cos18/42cursus">진행중인 프로젝트 (깃헙)</a>
@@ -215,19 +215,19 @@
             <div class="speaker">
                 <h2>발표</h2>
                 <div>
-                    <h3>파알못 30명과 함께 Django까지 마스터한.ssul 🇰🇷</h3>
+                    <h3>파알못 30명과 함께 Django까지 마스터한.ssul</h3>
                     <a href="https://archive.pycon.kr/2019/">PyconKR 2019</a> (라이트닝 토크) / Aug. 2019 - 서울 (<a
                         href="https://youtu.be/TUW-ytKumpM">영상</a>)
                 </div>
                 <div>
-                    <h3>개발 입문만 5년차, 학생이 바라본 SW교육 🇰🇷</h3>
+                    <h3>개발 입문만 5년차, 학생이 바라본 SW교육</h3>
                     <a href="https://www.edwith.org/sef-2019">SEF 2019</a> / Apr. 2019 - 서울 (<a
                         href="https://www.edwith.org/sef-2019/lecture/44874#_movie_21764">영상</a>)
                 </div>
                 <div>
-                    <h3>SW 의무교육 시대에서 살아남기 - 학생이 바라보는 교육자 🇰🇷</h3>
+                    <h3>SW 의무교육 시대에서 살아남기 - 학생이 바라보는 교육자</h3>
                     <a href="https://archive.pycon.kr/2018/">PyconKR 2018</a> / Aug. 2018 - 서울 (<a
-                        href="https://archive.pycon.kr/2018/program/27">상세내역</a>, <a
+                        href="https://archive.pycon.kr/2018/program/27">소개 페이지</a>, <a
                         href="https://www.slideshare.net/SungWooPark41/high-110673948">슬라이드</a>, <a
                         href="https://youtu.be/0Ejli8PoGyw">영상</a>)
                 </div>
