fix typo and add study info

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <li>프랑스에서 시작된 ecole42의 서울 캠퍼스 본과정 프로그램에 현재 참여중입니다.
                             42는 소프트웨어에 대한 경험을 나누는 방법, 멋진 동료와 협업하는 방법, 누군가를 위해 본인의 경험을 공유하는 방법을 배웁니다. 그리고 배우는 방법을 배웁니다.
                         </li>
-                        <li>현제 프로젝트로는 C로 Raytracing을 구현하는 miniRT를 시도중이며, 선발과정인 피씬 과정에서 팀 프로젝트 평가에 참여하여 도움을 주고 있습니다.<br>
+                        <li>현재 프로젝트로는 C로 Raytracing을 구현하는 miniRT를 시도중이며, 선발과정인 피씬 과정에서 팀 프로젝트 평가에 참여하여 도움을 주고 있습니다.<br>
                             또한 동아리 활동으로 JS을 짧은 기간에 익히는 <a href="JS Piscine">JS Piscine</a>을 기획중에 있습니다.</li>
                         <li>
                             <a href="https://42seoul.kr">홈페이지</a>,
@@ -160,7 +160,7 @@
                     <img src="src/swm.jpeg" alt="">
                     <ul>
                         <li>10기 수료생 (2019)</li>
-                        <li>창의도전형 SW인재 육성으로 SW산업의 미래르 선도하는 정부지원 사업인 소프트웨어 마에스트로 과정에 참여하여 수료했습니다.</li>
+                        <li>창의도전형 SW인재 육성으로 SW산업의 미래를 선도하는 정부지원 사업인 소프트웨어 마에스트로 과정에 참여하여 수료했습니다.</li>
                         <li>연수 과정중에 <a href="#somathealth">SomatHealth 프로젝트</a>를 진행했습니다.</li>
                         <li>
                             <a href="http://swmaestro.org/">홈페이지</a>
@@ -193,6 +193,7 @@
                     <h3>성균관대학교</h3>
                     <ul>
                         <li>컴퓨터교육과, 수학교육과 (2018 - now)</li>
+                        <li>2020년 8월 기준 3학년 1학기 (5학기) 이수</li>
                         <li>
                             <a href="https://github.com/cos18/COM2012-DataStructure">자료구조</a>,
                             <a href="https://github.com/cos18/COM3026-Algorithm">알고리즘</a>,
