--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="header">
             <div class="header-left">
                 <div class="profile-image">
-                    <img src="src/intro.jpg" alt="">
+                    <img src="src/intro.png" alt="">
                 </div>
             </div>
             <div class="header-right">
