fix css, change location and add some stuff

--- a/index.html
+++ b/index.html
@@ -75,11 +75,37 @@
                     </tr>
                     <tr>
                         <td class="name">Python</td>
-                        <td class="level">●●●○○</td>
+                        <td class="level">●●●●○</td>
                         <td class="name">Django</td>
-                        <td class="level">●●●○○</td>
+                        <td class="level">●●○○○</td>
                     </tr>
                 </table>
+            </div>
+            <div class="edu">
+                <h2>학력</h2>
+                <div>
+                    <h3>성균관대학교</h3>
+                    <ul>
+                        <li>컴퓨터교육과, 수학교육과 (2018 - now)</li>
+                        <li>2020년 8월 기준 3학년 1학기 (5학기) 이수</li>
+                        <li>
+                            <a href="https://github.com/cos18/COM2012-DataStructure">자료구조</a>,
+                            <a href="https://github.com/cos18/COM3026-Algorithm">알고리즘</a>,
+                            <a href="https://github.com/cos18/linux-socket.git">리눅스시스템</a>,
+                            선형대수학, 정수론, 미분기하학 과목 수강
+                        </li>
+                    </ul>
+
+                </div>
+                <div>
+                    <h3>한국디지털미디어고등학교</h3>
+                    <ul>
+                        <li>웹프로그래밍과 (2015 - 2018)</li>
+                        <li>
+                            웹프로그래밍, 데이터베이스, 안드로이드 프로그래밍 과목 수강
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div class="project">
                 <h2>프로젝트</h2>
@@ -98,6 +124,25 @@
                         <li>
                             <a href="http://eval42.herokuapp.com/">사이트</a>,
                             <a href="https://github.com/cos18/eval42">깃헙</a>
+                        </li>
+                    </ul>
+                </div>
+                <div id="js-piscine">
+                    <h3>JS Piscine</h3>
+                    <!--
+                        <img src="" alt="">
+                    -->
+                    <ul>
+                        <li>Jun 2020 ~ (진행중)</li>
+                        <li>JavaScript를 단기간에 배우는 교육과정 제작</li>
+                        <li>Modern JavaScript(ES6), Jest</li>
+                        <li>ecole42에는 JavaScript와 관련된 교육과정이 없어, 학생들끼리 새로운 교육과정을 만들자고 생각하고 제작에 들어갔습니다.<br>
+                            42에서 Piscine이라는 교육과정은 제공되는 강의나 교육자료 없이 주어지는 문제만으로 새로운 언어를 배우는 교육과정입니다.
+                            Piscine에 대한 자세한 설명은 <a href="https://github.com/42js/js_piscine#%EF%B8%8F-piscine이란">여기</a>를 참고해주세요.<br>
+                            학생 모임중 총괄자로 제작과정에서 Github PR Review를 도입하고 다양한 JS 패키지를 적용해 JS에 대해 실적적으로 배울 수 있도록 교육과정을 제작중입니다.
+                        </li>
+                        <li>
+                            <a href="https://github.com/42js/js_piscine">깃헙</a>
                         </li>
                     </ul>
                 </div>
@@ -148,10 +193,28 @@
                             42는 소프트웨어에 대한 경험을 나누는 방법, 멋진 동료와 협업하는 방법, 누군가를 위해 본인의 경험을 공유하는 방법을 배웁니다. 그리고 배우는 방법을 배웁니다.
                         </li>
                         <li>현재 프로젝트로는 C로 Raytracing을 구현하는 miniRT를 시도중이며, 선발과정인 피씬 과정에서 팀 프로젝트 평가에 참여하여 도움을 주고 있습니다.<br>
-                            또한 동아리 활동으로 JS을 짧은 기간에 익히는 <a href="JS Piscine">JS Piscine</a>을 기획중에 있습니다.</li>
+                            또한 동아리 활동으로 JS을 짧은 기간에 익히는 <a href="#js-piscine">JS Piscine</a>을 기획중에 있습니다.</li>
                         <li>
                             <a href="https://42seoul.kr">홈페이지</a>,
                             <a href="https://github.com/cos18/42cursus">진행중인 프로젝트 (깃헙)</a>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>멋쟁이 사자처럼 @ 성균관대학교</h3>
+                    <img src="src/likelion.jpg" alt="">
+                    <ul>
+                        <li>6기 참여 (2018), 7기 운영진 & 교육책임자 (2019)</li>
+                        <li>무엇이든 만들어보자는 슬로건에 끌려 6기에 처음 참여하였고, 7기에는 운영인으로 참여하면서 매주 세션 교육을 주도적으로 진행하였습니다.
+                            총 10번의 세션을 진행해 Python, Django, Git, AWS등 단기간에 웹 서비스를 만드는 과정을 교육했습니다.
+                            이를 진행하며 비전공자분들을 어떻게 첫 코딩을 알려드릴지 고민을 많이 했고, 이에 대한 생각을 <a href="#speaker">여러 컨퍼런스에서 공유</a>했습니다.
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/likelionskku/">페이스북</a>,
+                            <a href="https://github.com/cos18/likelion7th-edu">교육 자료</a>,
+                            <a href="https://www.youtube.com/playlist?list=PLBlLtvR3PRprIesQ1KOdqsHe5EsQfdzdI">
+                                유튜브 재생목록
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -167,53 +230,8 @@
                         </li>
                     </ul>
                 </div>
-                <div>
-                    <h3>멋쟁이 사자처럼 @ 성균관대학교</h3>
-                    <img src="src/likelion.jpg" alt="">
-                    <ul>
-                        <li>6기 참여 (2018), 7기 운영진 & 교육책임자 (2019)</li>
-                        <li>무엇이든 만들어보자는 슬로건에 끌려 6기에 처음 참여하였고, 7기에는 운영인으로 참여하면서 매주 세션 교육을 주도적으로 진행하였습니다.
-                            비전공자분들을 어떻게 첫 코딩을 알려드릴지 고민을 많이 했고, 이에 대한 생각을 여러 컨퍼런스에서 공유했습니다.
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/likelionskku/">페이스북</a>,
-                            <a href="https://github.com/cos18/likelion7th-edu">교육 자료</a>,
-                            <a href="https://www.youtube.com/playlist?list=PLBlLtvR3PRprIesQ1KOdqsHe5EsQfdzdI">
-                                유튜브 재생목록
-                            </a>
-                        </li>
-                    </ul>
-
-                </div>
-
             </div>
-            <div class="edu">
-                <h2>학력</h2>
-                <div>
-                    <h3>성균관대학교</h3>
-                    <ul>
-                        <li>컴퓨터교육과, 수학교육과 (2018 - now)</li>
-                        <li>2020년 8월 기준 3학년 1학기 (5학기) 이수</li>
-                        <li>
-                            <a href="https://github.com/cos18/COM2012-DataStructure">자료구조</a>,
-                            <a href="https://github.com/cos18/COM3026-Algorithm">알고리즘</a>,
-                            <a href="https://github.com/cos18/linux-socket.git">리눅스시스템</a>,
-                            선형대수학, 정수론, 미분기하학
-                        </li>
-                    </ul>
-
-                </div>
-                <div>
-                    <h3>한국디지털미디어고등학교</h3>
-                    <ul>
-                        <li>웹프로그래밍과 (2015 - 2018)</li>
-                        <li>
-                            웹프로그래밍, 데이터베이스, 안드로이드 프로그래밍
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="speaker">
+            <div class="speaker" id="speaker">
                 <h2>발표</h2>
                 <div>
                     <h3>파알못 30명과 함께 Django까지 마스터한.ssul</h3>
