--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     </tr>
                     <tr>
                         <td class="name">NodeJS(Express)</td>
-                        <td class="level">●●●●○</td>
+                        <td class="level">●●●○○</td>
                         <td class="name">React</td>
                         <td class="level">●●●○○</td>
                     </tr>
@@ -77,7 +77,7 @@
                         <td class="name">Python</td>
                         <td class="level">●●●●○</td>
                         <td class="name">Django</td>
-                        <td class="level">●●○○○</td>
+                        <td class="level">●○○○○</td>
                     </tr>
                 </table>
             </div>
@@ -115,7 +115,7 @@
                     <ul>
                         <li>July 2020 ~ (진행중)</li>
                         <li>42Seoul에서 동료평가시 도움을 주는 기능을 제공하는 서비스 개발</li>
-                        <li>React, Redux, Heroku, Serverless</li>
+                        <li>React, Redux, Heroku</li>
                         <li>혼자서 진행한 프로젝트로, 42api를 활용해 서비스를 만들었습니다.
                             API문서가 매우 빈약해 이번 프로젝트를 통하여 문서화의 중요성을 알게 되었습니다. <br>
                             빠르게 프로젝트를 진행하기 위해 외부 디자인 프레임워크 Ant-design와 간단한 배포 서비스인 Heroku를 사용하였고, Redux-Thunk를 도입한
@@ -251,17 +251,23 @@
                         href="https://youtu.be/0Ejli8PoGyw">영상</a>)
                 </div>
             </div>
-            <!--
             <div class="extra">
-                <h2>Extra Activities</h2>
+                <h2>자격증</h2>
                 <div>
-                    <h3>extra</h3>
+                    <h3>정보처리산업기사</h3>
                     <ul>
-                        <li>Empty</li>
+                        <li>자격증 번호 : 20202010637T</li>
+                        <li>취득 일시 : 2020.08.28</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>네트워크관리사 2급</h3>
+                    <ul>
+                        <li>자격증 번호 : NT2032427</li>
+                        <li>취득 일시 : 2016.01.26</li>
                     </ul>
                 </div>
             </div>
-            -->
         </div>
 
         <div class="main-bottom">
