OG 추가, 소개 수정

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <meta property="og:title" content="Sungwoo Park" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://sungwoo.dev" />
+    <meta property="og:image" content="http://sungwoo.dev/src/intro.png" />
+    <meta property="og:description" content="도전을 두려워하지 않는 개발자, 박성우" />
     <link rel="stylesheet" href="src/main.css">
     <link rel="stylesheet" type="text/css" href="src/icon/flaticon.css">
     <title>Sungwoo Park</title>
@@ -38,8 +43,8 @@
             </div>
             <div class="header-right">
                 <h1>Sungwoo Park</h1>
-                <h2>박성우</h2>
-                <div>미래를 꿈꾸는 개발자</div>
+                <div>도전을 두려워하지 않는 개발자, <b>박성우</b>입니다</div>
+                <div>React, TypeScript, Express와 같이 JS와 관련된 개발, 사용자와 가까운 서비스에 관심이 있습니다.</div>
                 <a href="mailto:codest99@gmail.com"><span class="flaticon-mail"></span>codest99@gmail.com</a><br>
                 <a href="https://github.com/cos18"><span class="flaticon-github-sign"></span>Github</a> <br>
                 <a href="https://www.facebook.com/cos.sungwoo"><span
@@ -52,6 +57,15 @@
         </div>
 
         <div class="main-description">
+            <!--
+            <div class="intro">
+                <h2>소개</h2>
+                <h3>저에게는 매일매일이 새로운 도전의 시작입니다</h3>
+                <span></span>
+                <h3>도전을 시작하면, 끝까지 갑니다</h3>
+                <span></span>
+            </div>
+            -->
             <div class="skill">
                 <h2>기술 / 스택</h2>
                 <table>
