군입대로 인한 프로젝트 변동사항 수정

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <h3>Eval42</h3>
                     <img src="src/eval42.png" alt="">
                     <ul>
-                        <li>July 2020 ~ (진행중)</li>
+                        <li>July ~ Aug 2020</li>
                         <li>42Seoul에서 동료평가시 도움을 주는 기능을 제공하는 서비스 개발</li>
                         <li>React, Redux, Heroku</li>
                         <li>혼자서 진행한 프로젝트로, 42api를 활용해 서비스를 만들었습니다.
@@ -147,13 +147,13 @@
                         <img src="" alt="">
                     -->
                     <ul>
-                        <li>Jun 2020 ~ (진행중)</li>
+                        <li>Jun 2020 ~ Sep 2021</li>
                         <li>JavaScript를 단기간에 배우는 교육과정 제작</li>
                         <li>Modern JavaScript(ES6), Jest</li>
                         <li>ecole42에는 JavaScript와 관련된 교육과정이 없어, 학생들끼리 새로운 교육과정을 만들자고 생각하고 제작에 들어갔습니다.<br>
                             42에서 Piscine이라는 교육과정은 제공되는 강의나 교육자료 없이 주어지는 문제만으로 새로운 언어를 배우는 교육과정입니다.
                             Piscine에 대한 자세한 설명은 <a href="https://github.com/42js/js_piscine#%EF%B8%8F-piscine이란">여기</a>를 참고해주세요.<br>
-                            학생 모임중 총괄자로 제작과정에서 Github PR Review를 도입하고 다양한 JS 패키지를 적용해 JS에 대해 실적적으로 배울 수 있도록 교육과정을 제작중입니다.
+                            학생 모임중 총괄자로 제작과정에서 Github PR Review를 도입하고 다양한 JS 패키지를 적용해 JS에 대해 실적적으로 배울 수 있도록 교육과정을 제작해 20여명의 학생들과 교육을 진행했습니다.
                         </li>
                         <li>
                             <a href="https://github.com/42js/js_piscine">깃헙</a>
@@ -164,7 +164,7 @@
                     <h3>5월 소프트웨어에 물들다 웹사이트</h3>
                     <img src="src/somul.png" alt="">
                     <ul>
-                        <li>Mar 2020 ~ (진행중)</li>
+                        <li>Mar ~ May 2020</li>
                         <li>매년 5월 진행하는 강연 봉사 프로젝트 사이트 개발 (프론트엔드) & 유지보수</li>
                         <li>React, Typescript, Storybook, Github Action</li>
                         <li>TypeScript와 Clean Architecture를 처음 접한 프로젝트입니다.
